--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -9,10 +9,9 @@ jobs:
       - name: Deploy runner on AWS EC2
         # Supports AWS, Azure, GCP, K8s
         env:
-          REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          REPO_TOKEN: ${{ secrets.PA_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
         run: |
           cml runner launch \
           --cloud=aws \
@@ -51,4 +50,4 @@ jobs:
           EOF
           cml comment create report.md
         env:
-          REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          REPO_TOKEN: ${{ secrets.PA_TOKEN }}
