--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,7 +16,7 @@ jobs:
           cml runner launch \
           --cloud=aws \
           --cloud-region=eu-central-1b \
-          --cloud-type=p2.xlarge \
+          --cloud-type=p3.2xlarge \
           --cloud-hdd-size=64 \
           --labels=cml-gpu \
           --cloud-aws-subnet=subnet-0b05ae1c12c11e6cb \
