--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,12 +15,10 @@ jobs:
         run: |
           cml runner launch \
           --cloud=aws \
-          --cloud-region=eu-central-1 \
+          --cloud-region=eu-west-1 \
           --cloud-type=p3.2xlarge \
           --cloud-hdd-size=64 \
-          --labels=cml-gpu \
-          --cloud-aws-subnet=subnet-001462dd31ce22c08 \
-          --cloud-aws-security-group=sg-00093b72abdec5c3c \
+          --labels=cml-gpu
   train-and-report:
     runs-on: [self-hosted, cml-gpu]
     needs: launch-runner
