--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,7 +16,7 @@ jobs:
           cml runner launch \
           --cloud=aws \
           --cloud-region=us-east-1 \
-          --cloud-type=p3.2xlarge \
+          --cloud-type=p2.xlarge \
           --cloud-hdd-size=64 \
           --labels=cml-gpu
   train-and-report:
